[gd_scene load_steps=2 format=3 uid="uid://item_icon_generator"]

[ext_resource type="Script" path="res://scripts/tools/item_icon_generator.gd" id="1_script"]

[node name="ItemIconGenerator" type="Node3D"]
script = ExtResource("1_script")
generate_on_ready = true
output_dir = "res://resources/icons/items"
icon_size = 128
items_dir = "res://scenes/items"
skip_patterns = Array[String](["Projectile"])
camera_distance_multiplier = 2.0
camera_angle_y = 35.0
camera_pitch = 25.0

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 1, 2)
projection = 1
size = 2.0
near = 0.01
far = 100.0

[node name="ItemMount" type="Node3D" parent="SubViewport"]

[node name="KeyLight" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 2, 3, 2)
light_color = Color(1, 0.98, 0.95, 1)
light_energy = 1.2
shadow_enabled = true

[node name="FillLight" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(0.866025, 0.25, -0.433013, 0, 0.866025, 0.5, 0.5, -0.433013, 0.75, -2, 2, -1)
light_color = Color(0.9, 0.95, 1, 1)
light_energy = 0.5

[node name="RimLight" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 1, -3)
light_color = Color(1, 1, 1, 1)
light_energy = 0.3
